# TapBeerVolumeControl_Firmware

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  flow_control.c  main.c  web_server.c  wifi.c
user_interface/: calibracao.js  index.html  operacao.js  script.js
